src/scss/App.scss
@import './variables.scss';

$transition-in: 100ms linear;
$transition-out: 250ms linear;

$content-width: 800px;
$screenshotScale: 0.9;

$phi: 1.6180339887498948482;

.app {
  font-size: 16px;
  line-height: 30px;
}

.container {
  max-width: $content-width;
  margin: 0 auto;
}

.navbar {
  margin-bottom: 90px;
  display: flex;
  justify-content: space-between;

  ul {
    list-style: none;

    li {
      display: inline-block;
      vertical-align: bottom;
    }

    a {
      display: flex;
      justify-content: center;
      align-items: center;

      color: $lighter;
      text-decoration: none;
      padding: 12px 14px;
      line-height: 32px;
      transition: color $transition-out;
      font-family: 'Montserrat', sans-serif;
      font-weight: 600;
      font-size: 14px;

      .lang-it & {
        padding: 12px 10px;
      }

      img.link-logo {
        width: 32px;
        height: 32px;
        opacity: 0.8;
        mix-blend-mode: overlay;
        transition: opacity $transition-out;

        &.before {
          margin-right: 10px;
        }

        &.after {
          margin-left: 10px;
        }
      }

      &.active, &:hover {
        color: $lightest;
        transition: color $transition-in;

        img.link-logo {
          opacity: 1;
          transition: opacity $transition-in;
        }
      }

      &.brand {
        color: $white;

        img {
          width: auto;
          height: 32px;
          opacity: 1;
          position: relative;
          mix-blend-mode: normal;
          top: 4px;
          left: -10px;
        }

        &:hover {
          border-bottom-color: transparent;

          img {
            opacity: 1;
          }
        }
      }
    }

    li:first-child a {
      padding-left: 0;
    }

    li:last-child a {
      padding-right: 0;
    }
  }
}

.cta {
  display: inline-block;
  text-align: center;
  font-size: 16px;
  text-decoration: none;
  line-height: 36px;
  padding: 4px 16px;
  margin-bottom: 10px;
  background: transparent;
  border: 0;
  cursor: pointer;

  &.button {
    font-weight: 500;
    color: $darkest;
    background: $lighter;
    border-radius: 4px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin-right: 4px;

    &:hover {
      background-color: lighten($lighter, 8%);
    }

    &.alt {
      background: transparent;
      border: 1px solid $lighter;
      padding: 3px 15px;
      color: $lighter;

      &:hover {
        color: lighten($lighter, 8%);
        border-color: lighten($lighter, 8%);
      }
    }
  }

  &.secondary {
    color: $lighter;
    padding-left: 0;
    padding-right: 0;

    &:hover {
      color: $lightest;
    }
  }
}

.cta-secondary {
  font-size: 18px;
  line-height: 36px;
  padding: 6px 16px;
}

.intro {
  text-align: center;
  padding-top: 15px;
  overflow: hidden;
  background: lighten($darkest, 4%);
  background: linear-gradient(150deg, lighten($darkest, 10%), lighten($darkest, 4%));
  color: $lighter;

  .text {
    width: $content-width;
    margin: 0 auto;
  }

  h1 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 26px;
    margin-bottom: 20px;

    strong {
      color: $lightest;
    }
  }

  p {
    color: $lighter;
    font-size: 18px;
    margin-bottom: 26px;
  }
}

.hero {
  position: relative;
  margin: 30px auto;
  padding-bottom: 15px;
  width: $content-width;
  height: 330px;

  img {
    position: absolute;
    display: block;
    border-radius: 4px;
    box-shadow: 0 -5px 10px 0px rgba(0, 0, 0, 0.2);
  }

  .desktop {
    max-width: $content-width * $screenshotScale;
    top: 0;
    left: 0;
  }

  .mobile {
    max-width: ($content-width / 4) * $screenshotScale;
    top: 90px;
    right: 0;
  }

  .logo {
    width: 150px;
    left: 0;
    right: 0;
    bottom: -75px;
    margin: auto;
    background: $darkest;
    padding: 10px;
    border-radius: 85px;
    box-shadow: none;
  }
}

.as-seen-on, .frontpage-sponsorship {
  background: darken($darkest, 4%);
  padding: 30px 0;
  padding-bottom: 50px;

  h2 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 16px;
    color: lighten($darkest, 40%);
    text-align: center;
    margin-bottom: 20px;
  }

  .logo-grid {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;

    & > div {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: row;
    }

    a {
      display: inline-block;
      text-decoration: none;
      padding: 0 10px;

      img {
        display: block;
        margin: 0;
        max-width: 200px;
        opacity: 0.5;
        transition: all $transition-in;
        filter: grayscale(100%);
      }

      &:hover {
        img {
          opacity: 0.8;
          transition: all $transition-out;
          filter: grayscale(0%);
        }
      }
    }
  }

  .logo-product-hunt {
    padding: 0;
  }

  .logo-the-verge {

  }

  .logo-wired {

  }

  .logo-motherboard {

  }
}

.frontpage-sponsorship {
  .logo-grid a {
    padding: 0 20px;
  }
}

.brand {
  display: inline-block;
  position: relative;
  z-index: 2;

  &::before {
    content: "";
    display: block;
    background: url('assets/elephant-friend-top.png');
    position: absolute;
    width: 393px;
    height: 176px;
    z-index: -1;
    top: -21px;
    left: -28px;
    pointer-events: none;
  }

  &:hover {
    &::before {
      top: -20px;
    }
  }
}

.feature {
  display: flex;
  margin: 100px auto;
  align-items: center;
  justify-content: space-between;

  .left {
    margin-right: 20px;
    order: 1;
    text-align: left;

    .lang-ar & {
      text-align: right;
    }
  }

  .right {
    margin-left: 20px;
    order: 2;
    text-align: right;

    .lang-ar & {
      text-align: right;
    }
  }

  .text {
    width: 80%;
    font-size: 16px;
    line-height: 24px;

    strong {
      font-weight: 500;
      color: $lightest;
    }
  }

  .visual {
    max-width: 20%;

    i {
      font-size: 128px;
      color: lighten($darkest, 30%);
    }
  }

  h2, h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 21px;
    margin-bottom: 20px;
    color: $lightest;
  }

  h3 {
    font-size: 18px;
    line-height: 24px;
  }

  .additional-features {
    width: 100%;

    .lang-ar & {
      direction: rtl;

      li i {
        margin-right: 0;
        margin-left: 10px;
      }
    }

    ul {
      columns: 3;
      column-gap: 15px;
    }

    li {
      display: flex;
      line-height: 1.5em;
      padding-bottom: .5em;
      -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
          page-break-inside: avoid; /* Firefox */
               break-inside: avoid; /* IE 10+ */

      i {
        display: block;
        flex: 0 0 auto;
        margin-right: 10px;
        color: lighten($darkest, 30%);
      }
    }
  }
}

.lang-ja {
  .feature {
    .text {
      strong {
        font-weight: 700;
      }
    }
  }
}

.lang-zh {
  .feature {
    .text {
      strong {
        font-weight: 700;
      }
    }
  }
}

.hero__floats {
  position: absolute;
  width: 100%;
  height: 100%;

  img {
    position: absolute;
    transition: all 0.1s linear;
    animation-name: floating;
    animation-duration: 1.7s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: linear;
    box-shadow: none;
  }

  .float-1 {
    left: -200px;
    top: 100px;
    height: 170px;
  }

  .float-2 {
    right: -30px;
    left: auto;
    top: -90px;
    height: 100px;
    animation-delay: 0.2s;
  }

  .float-3 {
    left: auto;
    right: -240px;
    top: 200px;
    height: 140px;
    animation-delay: 0.1s;
  }
}

.bottom-cta {
  background: darken($darkest, 4%);
  padding: 50px 0;
  padding-top: 70px;

  .lang-ar & {
    direction: rtl;
  }

  h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 20px;
    color: $lightest;
  }

  p {
    margin-bottom: 30px;
  }
}

@media only screen and (max-width: $content-width) {
  .navbar {
    padding: 0 20px;
  }

  .bottom-cta {
    padding-left: 20px;
    padding-right: 20px;
  }

  .frontpage-sponsorship,
  .as-seen-on {
    .logo-grid {
      & > div {
        flex-direction: column;

        a {
          padding: 10px;
        }

        .logo-product-hunt {
          padding: 0;
        }
      }
    }
  }

  .intro {
    .text {
      width: 90%;
    }

    .hero {
      width: 90%;
      height: 190px;
      padding-bottom: 100px;
    }

    .hero__floats {
      display: none;
    }

    .desktop {
      position: relative;
      width: percentage($screenshotScale);
      top: 0;
      left: 0;
    }

    .mobile {
      width: percentage($screenshotScale/4);
      top: percentage($screenshotScale/8);
      right: 0;
    }

    .logo {
      width: percentage($screenshotScale/4);
    }
  }

  .feature {
    display: block;
    margin: 60px 0;

    &:first-child {
      margin-top: 60px;
    }

    .left, .right {
      box-sizing: border-box;
      width: 100%;
      padding: 0 20px;
      margin: 15px auto;
      text-align: left;
    }

    .visual {
      display: none;
    }

    .additional-features {
      box-sizing: border-box;
      padding: 0 20px;

      ul {
        columns: 3;
      }
    }
  }
}

@media only screen and (max-width: 740px) {
  .feature {
    .additional-features {
      ul {
        columns: 2;
      }
    }
  }
}

@media only screen and (max-width: 510px) {
  .feature {
    .additional-features {
      ul {
        columns: 1;
      }
    }
  }
}

@media only screen and (max-width: $content-width - 50px) {
  .brand::before {
    display: none;
  }
}

@media only screen and (max-width: 640px) {
  .navbar {
    display: block;
    background: $darkest;
    margin-top: -15px;
    margin-bottom: 50px;
  }

  .link-logo.after {
    display: none;
  }

  .intro {
    .hero {
      height: 120px;
    }
  }

  .frontpage-sponsorship,
  .as-seen-on {
    .logo-grid {
      flex-wrap: wrap;
    }
  }
}

@media only screen and (max-width: 460px) {
  .navbar ul li.optional-link {
    display: none;
  }
}

@media only screen and (max-width: 400px) {
  .as-seen-on .logo-grid {
    flex-direction: column;
  }
}

@media only screen and (max-width: 380px) {
  .hero {
    display: none;
  }

  .intro {
    padding-bottom: 60px;
  }

  .navbar ul li.optional-link-2 {
    display: none;
  }
}

@keyframes floating {
  from {
    transform: translate(0, 0px);
  }

  65% {
    transform: translate(0, 4px);
  }

  to {
    transform: translate(0, -0px);
  }
}

.icon-circled {
  display: inline-block;
  margin-right: 10px;
}

iframe {
  box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
}

